--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Base.lproj/LaunchScreen.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Base.lproj/LaunchScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -10,16 +10,25 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xamoomtech" translatesAutoresizingMaskIntoConstraints="NO" id="1mO-vh-LZk">
+                    <rect key="frame" x="243" y="364" width="240" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="X8c-BK-6zL"/>
+                        <constraint firstAttribute="height" constant="128" id="gss-bh-vQl"/>
+                    </constraints>
+                </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="CZ0-nG-zra">
-                    <rect key="frame" x="88" y="8" width="305" height="464"/>
+                    <rect key="frame" x="29" y="-38" width="422" height="641"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="0.93333333333333335" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="CZ0-nG-zra" secondAttribute="trailing" constant="87" id="1gd-Ye-NCt"/>
-                <constraint firstItem="CZ0-nG-zra" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="AZE-Mj-sU3"/>
-                <constraint firstAttribute="bottom" secondItem="CZ0-nG-zra" secondAttribute="bottom" constant="8" id="L9i-Jh-pZ7"/>
-                <constraint firstItem="CZ0-nG-zra" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="88" id="qGZ-eJ-sIY"/>
+                <constraint firstAttribute="trailing" secondItem="CZ0-nG-zra" secondAttribute="trailing" constant="29" id="1gd-Ye-NCt"/>
+                <constraint firstAttribute="trailing" secondItem="1mO-vh-LZk" secondAttribute="trailing" constant="-3" id="5K0-GD-t4l"/>
+                <constraint firstItem="CZ0-nG-zra" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-38" id="AZE-Mj-sU3"/>
+                <constraint firstAttribute="bottom" secondItem="CZ0-nG-zra" secondAttribute="bottom" constant="-123" id="L9i-Jh-pZ7"/>
+                <constraint firstItem="CZ0-nG-zra" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="29" id="qGZ-eJ-sIY"/>
+                <constraint firstAttribute="bottom" secondItem="1mO-vh-LZk" secondAttribute="bottom" constant="-12" id="rTr-qv-sF7"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -28,5 +37,6 @@
     </objects>
     <resources>
         <image name="launchscreen" width="655" height="1150"/>
+        <image name="xamoomtech" width="507" height="135"/>
     </resources>
 </document>
