--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/FeedItemCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/FeedItemCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -44,14 +44,9 @@
                             <constraint firstAttribute="trailing" secondItem="4wb-79-OqP" secondAttribute="trailing" constant="14" id="uSv-MO-4ps"/>
                         </constraints>
                     </view>
-                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="8pK-L0-lt3">
-                        <rect key="frame" x="231" y="55" width="20" height="20"/>
-                    </activityIndicatorView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="RLb-uj-IBD" firstAttribute="centerY" secondItem="8pK-L0-lt3" secondAttribute="centerY" id="0Rv-kV-LAW"/>
                     <constraint firstItem="XeV-xf-ZXR" firstAttribute="top" secondItem="RLb-uj-IBD" secondAttribute="top" id="7fD-LG-20h"/>
-                    <constraint firstItem="RLb-uj-IBD" firstAttribute="centerX" secondItem="8pK-L0-lt3" secondAttribute="centerX" id="AHS-ew-h9U"/>
                     <constraint firstItem="RLb-uj-IBD" firstAttribute="bottom" secondItem="EiK-aS-q9u" secondAttribute="bottomMargin" id="CRR-0m-1Ae"/>
                     <constraint firstItem="RLb-uj-IBD" firstAttribute="top" secondItem="EiK-aS-q9u" secondAttribute="top" id="Cw7-Q0-4Ll"/>
                     <constraint firstItem="XeV-xf-ZXR" firstAttribute="leading" secondItem="RLb-uj-IBD" secondAttribute="leading" id="H1X-bp-xtb"/>
@@ -69,7 +64,6 @@
                 <outlet property="feedItemOverlayImage" destination="XeV-xf-ZXR" id="fOV-HY-725"/>
                 <outlet property="feedItemTitle" destination="4wb-79-OqP" id="fkH-01-jWG"/>
                 <outlet property="imageHeightConstraint" destination="gVU-IG-sXy" id="o3Q-nn-WRd"/>
-                <outlet property="loadingIndicator" destination="8pK-L0-lt3" id="Jk8-8M-B4o"/>
             </connections>
             <point key="canvasLocation" x="405" y="258.5"/>
         </tableViewCell>
